# CanDetector

./: CMakeLists.txt  LICENSE  README.md
include/: annotation.h  descriptor.h
src/: annotation.cpp  descriptor.cpp  main.cpp
